Kreirana klasa DB sa pristupnim podacima za bazu te metodama za uspostavljanje veze, zatvaranje veze, dohvaćanje čitača te izvršavanje sql komande.

--- a/Software/Zadaca3/Zadaca3/Zadaca3.csproj
+++ b/Software/Zadaca3/Zadaca3/Zadaca3.csproj
@@ -76,5 +76,18 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
+  <ItemGroup>
+    <Content Include="DLLs\DBLayer.dll" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Models\" />
+    <Folder Include="Repositories\" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\DBLayer\DBLayer.csproj">
+      <Project>{9e98ca2f-8af2-44db-9995-dd488d4655ae}</Project>
+      <Name>DBLayer</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
