Kreirana Forma dodavanja i Forma promjene statusa narudžbi. Trenutno su definirane samo kućice za ispunu podataka i oznake, a kasnije će biti implementirana sama metoda dodavanja/promjene. Novokreirane forme su povezane sa Formom narudzbi preko prikladnih gumbova.

--- a/Software/Zadaca3/Zadaca3/Zadaca3.csproj
+++ b/Software/Zadaca3/Zadaca3/Zadaca3.csproj
@@ -46,6 +46,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="FrmDodavanje.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FrmDodavanje.Designer.cs">
+      <DependentUpon>FrmDodavanje.cs</DependentUpon>
+    </Compile>
     <Compile Include="FrmLogin.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -58,17 +64,29 @@
     <Compile Include="FrmNarudzbe.Designer.cs">
       <DependentUpon>FrmNarudzbe.cs</DependentUpon>
     </Compile>
+    <Compile Include="FrmPromjena.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FrmPromjena.Designer.cs">
+      <DependentUpon>FrmPromjena.cs</DependentUpon>
+    </Compile>
     <Compile Include="Models\Narudzba.cs" />
     <Compile Include="Models\Osoba.cs" />
     <Compile Include="Models\Zaposlenik.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repositories\RepozitorijNarudzba.cs" />
+    <EmbeddedResource Include="FrmDodavanje.resx">
+      <DependentUpon>FrmDodavanje.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="FrmLogin.resx">
       <DependentUpon>FrmLogin.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="FrmNarudzbe.resx">
       <DependentUpon>FrmNarudzbe.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FrmPromjena.resx">
+      <DependentUpon>FrmPromjena.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
