--- a/Software/Zadaca3/Zadaca3/Zadaca3.csproj
+++ b/Software/Zadaca3/Zadaca3/Zadaca3.csproj
@@ -46,6 +46,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="FrmBrisanje.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FrmBrisanje.Designer.cs">
+      <DependentUpon>FrmBrisanje.cs</DependentUpon>
+    </Compile>
     <Compile Include="FrmDodavanje.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -76,6 +82,9 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repositories\RepozitorijNarudzba.cs" />
+    <EmbeddedResource Include="FrmBrisanje.resx">
+      <DependentUpon>FrmBrisanje.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="FrmDodavanje.resx">
       <DependentUpon>FrmDodavanje.cs</DependentUpon>
     </EmbeddedResource>
