Implementirana prijava uz pomoć baze podataka gdje se na temelju korisničkog imena zaposlenika provjerava valjanost unesene lozinke.

--- a/Software/Zadaca3/Zadaca3/Zadaca3.csproj
+++ b/Software/Zadaca3/Zadaca3/Zadaca3.csproj
@@ -82,6 +82,7 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repositories\RepozitorijNarudzba.cs" />
+    <Compile Include="Repositories\RepozitorijZaposlenik.cs" />
     <EmbeddedResource Include="FrmBrisanje.resx">
       <DependentUpon>FrmBrisanje.cs</DependentUpon>
     </EmbeddedResource>
